# fymserver

./: .pre-commit-config.yaml  django_params.ini  manage.py  mypy.ini  pyproject.toml  run-django-server.sh  run-uwsgi-www-data.sh  run-uwsgi.sh  run_django_server.sh  run_uwsgi.sh  setup-www-data.sh
fymserver/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
maps/: admin.py  local_admin.py  models.py  tests.py  urls.py  views.py
maps/management/commands/: ingest_maps.py
maps/migrations/: 0001_initial.py  0002_alter_map_his_file_alter_map_jpg_file_and_more.py
players/: admin.py  decorators.py  models.py  tests.py  urls.py  views.py
players/migrations/: 0001_initial.py  0002_player_token.py  0003_player_email.py
trains/: admin.py  models.py  tests.py  urls.py  views.py
trains/management/commands/: ingest_trains.py
trains/migrations/: 0001_initial.py  0002_alter_train_downloaded_by.py  0003_alter_train_downloaded_by.py
