[tool.poetry]
name = "fymserver"
version = "0.1.0"
description = ""
authors = ["Daniel Evans <daniel.fred.evans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
