[tool.poetry]
name = "fymserver"
version = "0.1.0"
description = ""
authors = ["Daniel Evans <daniel.fred.evans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
django-storages = "^1.12.3"
boto3 = "^1.20.49"
uWSGI = "^2.0.20"
mysqlclient = "^2.1.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
mypy = "^0.931"
django-stubs = "^1.9.0"
django-override-storage = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
